# willmann

./: Dockerfile  README.md  build.sh  license.md  pyproject.toml  requirements.txt  setup.py
moder/: __init__.py  cli.py  main.py
src/willmann/: cli.py  config.yaml  main.py  modes
src/willmann/modes/moder/: main.py  requirements.txt
willmann/: __init__.py  cli.py  config.ini  main.py  run.py  willmann.py
willmann.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
willmann/base/: __init__.py  mode.py  utils.py
willmann/base/custom/: __init__.py  generic.py  input.py
willmann/modes/applications/: __init__.py  config.ini  intents.yaml  main.py
willmann/modes/bookmarks/: __init__.py  config.ini  main.py
willmann/modes/cards/: main.py
willmann/modes/changer/: __init__.py  main.py
willmann/modes/flashcard/: __init__.py  main.py
willmann/modes/generator/: config.ini  intents.yaml
willmann/modes/index/: main.py
willmann/modes/keyboard/: __init__.py  intents.yaml  main.py
willmann/modes/lookup/: intents.yaml
willmann/modes/moder/: __init__.py  main.py
willmann/modes/open_ai/: config.ini  utils.py
willmann/modes/player/: __init__.py  intents.yaml  main.py
willmann/modes/task/: main.py
willmann/modes/tasks/: __init__.py  config.ini  database.py  main.py
willmann/modes/todo/apps/: __init__.py
willmann/modes/todo/documents/: __init__.py  config.ini  main.py
willmann/modes/translator/: intents.yaml
willmann/modes/wiki/: config.ini  intents.yaml  main.py
willmann/modes/windows/: __init__.py  config.ini  intents.yaml  main.py
(+28 files in other folders)
