[build-system]

requires=["setuptools"]
build-backend="setuptools.build_meta"

[project]

name="willmann"
version="0.0.1"
description='Willmann - launcher'
dependencies=[
	"plug==0.0.1",
]

[project.scripts]

willmann="willmann.main:run"
willmannc="willmann.cli:run"

[tools.setuptools.package-data]

"*"=["*"]

[tools.setuptools.packages.find]

where=["src"]
